debug console color 적용

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.1.0
   recase: ^4.1.0
+  ansicolor: ^2.0.1
 
 dev_dependencies:
   flutter_test:
